# Lazyboard

./: .SRCINFO  .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  build.sh  commands.gdb  readme.md  resources.qrc  setup  zclipboard.desktop
.github/workflows/: linux.yml  linux_dev.yml  linux_dev_ci.yml  macos.yml  major.yml  windows.yml
Source/: zClipboard.cc
Source/Clipboard/: ClipboardCache.cc  ClipboardImage.cc  ClipboardText.cc
Source/Clipboard/Include/: ClipboardCache.hpp  ClipboardImage.hpp  ClipboardText.hpp
Source/Core/: CoreClearCache.cc  CoreConnect.cc  CoreDisconnect.cc  CoreNotification.cc  CorePassswordDialog.cc  CorePasswordForm.cc  CoreSetting.cc  CoreSettingWindow.cc  CoreSystemTray.cc
Source/Core/C_Lib/: Notification.c
Source/Core/Include/: CoreClearCache.hpp  CoreConnect.hpp  CoreDisconnect.hpp  CoreNotification.hpp  CorePasswordDialog.hpp  CorePasswordForm.hpp  CoreSetting.hpp  CoreSettingWindow.hpp  CoreSystemTray.hpp  Enum.hpp
Source/Database/: DatabaseManager.cc
Source/Database/Include/: DatabaseManager.hpp
Source/Encryption/C_Lib/: Argon2id.c
Source/GUI/: ClearButton.cc  ClipboardDialog.cc  ConnectButton.cc  DisconnectButton.cc  GetConnectButton.cc  InputPasswordDialog.cc  LanguageManager.cc  SearchPanel.cc  SettingButton.cc  SystemTray.cc  TableModel.cc  TableView.cc  ThemeManager.cc  Window.cc
Source/GUI/Hot_Reload/: HotReload_Language.cc
Source/GUI/Include/: ClearButton.hpp  ClipboardDialog.hpp  DisconnectButton.hpp  GetConnectButton.hpp  InputPasswordDialog.hpp  LanguageManager.hpp  SearchPanel.hpp  SettingButton.hpp  SettingDialog.hpp  SystemTray.hpp  TableModel.hpp  TableView.hpp  ThemeManager.hpp  Window.hpp
Source/GUI/Toolkit/: Components_Toolkit.cc  LayoutManager.cc  MainWindow_Components.cc  MainWindow_LayoutManager.cc  SettingWindow_Components.cc  SettingWindow_LayoutManager.cc
Source/GUI/Windows/: SettingWindow.cc
Source/Helper_Implements/: LayoutManager_Impl_Helper.cc  MainWindow_GUI_Impl_Helper.cc  Theme_Impl_Helper.cc
Source/Helper_Implements/Include/: LayoutManager_Impl_Helper.hpp  MainWindow_GUI_Impl_Helper.hpp  Theme_Impl_Helper.hpp
Source/Imlements/: Theme_Impl.cc
Source/Imlements/Include/: Theme_Impl.hpp
Source/Implements/: Launch_App_Impl.cc  Theme_Impl.cc  Window_Impl.cc
Source/Implements/GUI_Components/: Manager_MainWindow_Component.cc
Source/Implements/Include/: Launch_App_Impl.hpp  Theme_Impl.hpp  Window_Impl.hpp
Source/Language/: Translate.cc
Source/Language/Include/: Language.hpp  Translate.hpp
Source/Lib_Memory/: MainWindow_ObjectManager.cc
Source/Lib_Memory/Include/: MainWindow_ObjectManager.hpp  Memory.hpp
Source/Listener/: ListenerClearCache.cc  ListenerConnect.cc  ListenerDisconnect.cc  ListenerOpenSettingWindow.cc  ListenerPasswordDialog.cc  ListenerPasswordForm.cc
Source/Listener/Include/: ListenerClearCache.hpp  ListenerConnect.hpp  ListenerDisconnect.hpp  ListenerOpenSettingWindow.hpp  ListenerPasswordDialog.hpp  ListenerPasswordForm.hpp
Source/Network/: NetworkDialog.cc  NetworkDiscovery.cc  NetworkState.cc
Source/Preload/: PreloadPassword.cc  PreloadTheme.cc
Source/Utils/: Utils.cc
ffi_rs/: Cargo.toml  test_lib.cxx  test_lib.sh
ffi_rs/src/: lib.rs
rustlib_test/: Cargo.toml  main.cxx  test.sh
rustlib_test/src/: lib.rs
scripts/: Makefile  build.sh  ci_dev_linux.sh  ci_linux.sh  ci_macos.sh  ci_windows.ps1  debug.sh  gdb.sh  gen_compile_commands.sh  linux_deploy.sh  reset-cache.sh  trans.sh
scripts/tests/: encrypt.sh  platform.sh  setting.sh  sql.sh  trans.sh
scripts/tools/: config.sh  embed_icon.sh  sync_aur.sh  trans.sh
src/: main.cxx  zclipboard.cc
src/back_end/: Cargo.toml
src/back_end/src/: lib.rs
src/back_end/src/config/: constant.rs  toml.rs
src/back_end/src/core/: macro.rs  result_enum.rs  sha.rs  sqlite.rs  time.rs  utf8.rs
src/back_end/src/internal/: app_config.rs
src/back_end/src/raw_config/: constant.rs  raw_toml.rs
src/back_end/src/utils/: browser.rs  fs_utils.rs  memory.rs  sqlite.rs
src/back_end/tests/: config.rs  fs_utils.rs  memory.rs  sqlite.rs  time.rs  utf8.rs
src/clipboard/: cache.cc  image.cc  text.cc  text.cxx
src/core/: CoreDisconnect.cc  clear.cc  corePassswordDialog.cc  corePasswordForm.cc  notification.cc  setting.cc  systemTray.cc
src/encryption/: dialog_info.cc  encryption.cc
src/ffi/raw/: utils.hxx  (+2 more)
src/front_end/: about_widget.cxx  about_window.cxx  main_window.cxx  main_window_preload.cxx  setting_widget.cxx  table_widget.cxx  theme_manager.cxx
src/front_end_db/: sqlite_manager.cxx
src/gui/: zdialog.cc  ztable.cc
src/language/: language.hpp  translate.cc
src/listener/: ListenerDisconnect.cc  clearCacheListener.cc  dialogListener.cc  passwordFormListener.cc
src/preload/: password.cc  theme.cc
src/tests/: config.cxx  tests.sh
src/zGui/: LanguageManager.cc  ThemeManager.cc  clearButton.cc  dialog.cc  disconnectButton.cc  getButton.cc  passwordDialog.cc  settingButton.cc  systemTray.cc  zClipboardModel.cc  zSearchPanel.cc  zdialog.cc  ztable.cc  zwindow.cc
src/zSQL/: zSQL.cc
src/zUtils/: zUtils.cc
src/znetwork/: PeerDialog.cc  PeerDiscovery.cc
tests/: MikotoTest.py  encrypt_t.py
tests-ffi/: Makefile  config.cxx  demo.toml  fs.cxx  sha.cxx  sqlite.cxx  tests.sh  time.cxx  toml_config.cxx
tests/encrypt/: CMakeLists.txt  encrypt_t.py
tests/encrypt/src/: main.cc
tests/encrypt/src/lib/: encrypt.c
tests/encrypt/src/lib/include/: encrypt.h
tests/nullptr_assert/: CMakeLists.txt  run.sh
tests/nullptr_assert/Source/: main.cc
tests/platform/: CMakeLists.txt  platform.t
tests/platform/src/: main.cc
tests/setting_qt/: CMakeLists.txt  setting_qt.t
tests/sql/: CMakeLists.txt  sql.t
tests/sql/src/: main.c
tests/test_lib/: test_lib.pm
tests/translator/: CMakeLists.txt  trans.t
tests/translator/src/: main.cc
tests/translator_migration/: generate_test.py  result_test_.hpp
tools/: Makefile  embed_img.py  fmt.sh  generate.py  helper.py  sync_aur.py  translate.py
tools/xml/: config.xml  language.xml
zclipboard/: PKGBUILD
(+100 files in other folders)
