[package]
name = "back_end"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[profile.dev]
panic = "abort"

[dependencies]
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
webbrowser = "1.0.5"
