[package]
name = "back_end"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]

[profile.dev]
panic = "abort"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
hex = "0.4.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.5"
webbrowser = "1.0.5"
